@@ -1,4 +1,4 @@
-2017-10-19
+2017-10-20
 
         * Version 1.5.0 released
         =========================
@@ -23,6 +23,7 @@
         Allow source position fitting for Fermi-LAT data (#2183)
         Add GModelSpectralNodes spectral model constructor (#2178)
         Fix UTC rounding error in GTime::utc() method (#2177)
+        Add GSkyMap division operator for Python 3.x (#2122)
         Add time parameter to GApplicationPar class (#1864)
         Add time string constructor and set method to GTime class (#1864)
         Use GNdarray to store GSkyMap pixels and add smooth() method (#1729)
